--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,10 @@ python:
   - "3.4"
 install:
   - python setup.py install
+  - pip install coveralls
+  - pip install pep8
 script:
+  - pep8 pyramda
   - python setup.py nosetests
+after_success:
+  - coveralls
