--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: python
 python:
   - "2.6"
   - "2.7"
-  - "3.0"
-  - "3.1"
   - "3.2"
   - "3.3"
   - "3.4"
+  - "3.5-dev"
+  - "nightly"
 install:
   - python setup.py install
   - pip install coveralls
