--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
   - pip install coveralls
   - pip install pep8
 script:
-  - pep8 pyramda
+  - pep8 --max-line-length 100 pyramda
   - python setup.py nosetests
 after_success:
   - coveralls
